--- a/apps/tracker/.env.schema
+++ b/apps/tracker/.env.schema
@@ -1,6 +1,17 @@
 ## Server
 PORT=
 
+## MongoDB
+MONGO_URL=
+MONGO_USER=
+MONGO_PASS=
+
+## Elastic Search user and password
+ES_HOST=
+ES_USER=
+ES_PASS=
+ES_INDEX=
+
 ## Kafka
 KAFKA_BROKER=
 KAFKA_CLIENT_ID=
@@ -11,7 +22,11 @@ KAFKA_JOBUPDATES_PARTITIONS=
 KAFKA_JOBUPDATES_GROUP=
 
 ## Features
+### Enable Test Endpoints
+FEATURE_DEV_TESTING_ROUTES=
 
-### Enable Test Endpoints 
-FEATURE_DEV_TESTING_ROUTES_ENABLED=
-FEATURE_KAFKA_CONNECTION_DISABLE=
+### Enable Kafka connection
+FEATURE_KAFKA_CONNECTION=
+
+### Enable Sync to Elasticsearch
+FEATURE_ES_SYNC=
