--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -1,17 +1,23 @@
 {
   "name": "jobs-tracker-demo",
   "version": "1.0.0",
-  "description": "",
+  "description": "Development demo application to test out Jobs Tracker server",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "start": "npm run build && npm run serve",
+    "serve": "node dist/index.js",
     "build": "rm -rf dist && mkdir dist && NODE_PATH=./src tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Jon Eubank",
+  "license": "GPL3",
   "devDependencies": {
     "@types/node": "^17.0.23",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "optionals": "workspace:*",
+    "@joneubank/jobs-tracker-client": "workspace:*"
   }
 }
