--- a/apps/demo/tsconfig.json
+++ b/apps/demo/tsconfig.json
@@ -1,17 +1,17 @@
 {
   "compilerOptions": {
-    "lib": ["esnext"],
+    "lib": ["esnext", "DOM"],
     "module": "commonjs",
     "strict": true,
-    
+
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    
+
     "noImplicitAny": true,
     "removeComments": true,
     "strictNullChecks": true,
     "preserveConstEnums": true,
-    
+
     "outDir": "./dist",
     "declaration": true,
     "sourceMap": true
