--- a/apps/tracker/package.json
+++ b/apps/tracker/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@joneubank/jobs-tracker",
   "version": "1.0.0",
-  "description": "Track progress of Jobs running in your services through kafka notifications",
+  "description": "Track progress of Jobs running in your services",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "start": "npm run serve",
+    "start": "npm run build && npm run serve",
     "serve": "node dist/index.js",
     "debug": "nodemon --delay 1000ms --inspect --watch  'src/**/*.ts' --exec node -r ts-node/register ./src/index.ts",
     "build": "rm -rf dist && mkdir dist && NODE_PATH=./src tsc"
@@ -24,6 +24,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.180",
+    "@types/mongoose": "~5.11.97",
     "@types/node": "^17.0.23",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
@@ -31,11 +32,13 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "7.5.0",
+    "dotenv": "~16.0.0",
     "express": "^4.17.3",
     "kafkajs": "^1.16.0",
     "lodash": "^4.17.21",
-    "logger": "workspace:*",
+    "mongoose": "~6.2.9",
     "data-model": "workspace:*",
-    "dotenv": "~16.0.0"
+    "logger": "workspace:*",
+    "optionals": "workspace:*"
   }
 }
