--- a/libraries/optionals/package.json
+++ b/libraries/optionals/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "data-model",
+  "name": "optionals",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "start": "npm run build && npm run serve",
+    "serve": "node dist/index.js",
     "build": "rm -rf dist && mkdir dist && NODE_PATH=./src tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/lodash": "^4.14.181",
     "typescript": "^4.6.3"
   },
-  "dependencies": {
-    "lodash": "^4.17.21",
-    "logger": "workspace:*"
-  }
+  "dependencies": {}
 }
